# linear-simplex-haskell

./: README.md  linear-simplex.cabal
src/: Linear.hs
src/Linear/: .#Grammar.hs  .#Simplex.hs  Api.hs  Context.hs  Grammar.hs  Internal.hs  Simplex.hs  Slack.hs
test/: LinearSpec.hs  Spec.hs
