Name:                   linear-simplex
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Linear.Api
                        Linear.Context
                        Linear.Grammar
                        Linear.Simplex
  Build-Depends:        base >= 4.8 && < 5
                      , containers
                      , mtl

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances
                      , containers
                      , mtl

Source-Repository head
  Type:                 git
--  Location:
